--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^3.0.6",
+        "body-parser": "^1.19.0",
+        "cookie-parser": "^1.4.4",
         "express": "^4.17.1",
         "express-handlebars": "^3.1.0",
         "express-session": "^1.16.2",
+        "moment": "^2.24.0",
         "mysql2": "^1.7.0",
+        "passport": "^0.4.0",
+        "passport-local": "^1.0.0",
         "uuid": "^3.3.3"
     }
 }
